--- a/Index1.html
+++ b/Index1.html
@@ -21,7 +21,7 @@
                     <i class="fas fa-phone"></i> Phone: +(88) 01776-320045
                 </div>
                 <div class="email">
-                    <i class="fas fa-envelope"></i> Email: sayemhussain120@gmail.com
+                    <i class="fas fa-envelope"></i> Gmail:sayemhussain120@gmail.com
                 </div>
 
                 <div class="social">
