--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="primaryWrapper">
 
                     <div class="logo">
-                         <img src="E:\WWW\HTML\Brigate\Images/logo.svg">
+                         <img src="Images/logo.svg">
                     </div>
 
                     <div class="menu">
